PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/Global_Variables_multiple_values.pf
module Binary{

    Int a = 34 31

}